--- a/package.json
+++ b/package.json
@@ -27,17 +27,16 @@
     }
   },
   "scripts": {
-    "build": "tsup",
+    "build": "cross-env rimraf dist & tsup",
     "ci": "yarn run coverage",
-    "test": "jest"
+    "test": "vitest"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.12",
     "@types/node": "^20.12.2",
-    "jest": "^29.7.0",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.2",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.3",
+    "vitest": "^1.4.0"
   },
   "packageManager": "yarn@4.1.1",
   "dependencies": {
