--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "packageManager": "yarn@4.1.1",
   "dependencies": {
     "chokidar": "^3.6.0",
+    "crc-32": "^1.2.2",
     "csv-parse": "^5.5.5",
     "csv-stringify": "^6.4.6",
     "multiformats": "^13.1.0",
