--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "test": "vitest"
   },
   "devDependencies": {
+    "@libp2p/crypto": "^4.0.5",
     "@types/node": "^20.12.2",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.2",
