--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
     "typescript": "^5.4.3",
     "vitest": "^1.4.0"
   },
-  "packageManager": "yarn@4.1.1",
   "dependencies": {
     "chokidar": "^3.6.0",
     "crc-32": "^1.2.2",
     "csv-parse": "^5.5.5",
     "csv-stringify": "^6.4.6",
     "debounce": "^2.0.0",
+    "hash-wasm": "^4.12.0",
     "multiformats": "^13.1.0",
     "p-queue": "^8.0.1",
     "piscina": "^4.4.0"
